Fix game window being too small and offset

--- a/src/style.css
+++ b/src/style.css
@@ -4,5 +4,16 @@
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
-  margin-top: 60px;
+  height: 98%;
+  width: 98%;
+  margin: auto;
+}
+
+.window-controls {
+  margin-bottom: 0.5em;
+}
+
+canvas {
+  display: block;
+  margin: auto;
 }
